cards restore done

--- a/public/cards.html
+++ b/public/cards.html
@@ -14,7 +14,7 @@
                   </div>
                   </div>
 
-                  <input ng-hide="!appDetails.length" type="button" class="btn btn-primary pull-right" value="Submit" ng-click="uploadFile()">
+                  <input type="button" class="btn btn-primary pull-right" value="logout" ng-click="logout()">
                   <!--<input ng-hide="!appDetails.length" type="button" class="btn btn-danger pull-right" ng-click="remove()" value="Remove">-->
                 </div>
                           </div>
