--- a/public/register.html
+++ b/public/register.html
@@ -6,9 +6,12 @@
     <label><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" ng-model="password" required>
 
+    <label><b>Contact</b></label>
+    <input type="text" placeholder="phone no" name="phone" ng-model = "phone" required>
+
     <div class="clearfix">
-      <a type="button" href="/#/register" class="cancelbtn">Register</a>
-      <button type="submit" class="signupbtn"ng-click="login()">Login</button>
+      <button type="button"  class="cancelbtn">Cancel</button>
+      <button type="submit" class="signupbtn"ng-click="register()">Sign Up</button>
     </div>
   </div>
 </form>
